trying button safari fix

--- a/src/App.css
+++ b/src/App.css
@@ -98,5 +98,7 @@ padding: 50px 0;
 
   button{
     -webkit-appearance: none;
+    align-self: center;
+    justify-content: center;
   }
 }
